--- a/frontend/web/src/app/pages/news/news.component.scss
+++ b/frontend/web/src/app/pages/news/news.component.scss
@@ -203,6 +203,7 @@
 .aktuelles__layout {
   display: grid;
   gap: 1.5rem;
+  margin-top: 1rem;
 }
 
 @media (min-width: 1100px) {
